# eastmoneywatch

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
backend/: cache_manager.py  concepts.py  config.py  data_processor.py  fluctuation.py  get_changes_worker_queue.py  main.py  models.py  prepare.py  pyproject.toml  test_picked.py  utils.py  worker_queue.py
backend/akshare/file_fold/: calendar.json
backend/routes/: api.py  websocket.py
backend/services/: backend_service.py  pick_service.py
backend/static/: changes.csv  concepts.csv
frontend/: components.json  index.html  package.json  tailwind.config.js
frontend/app/: App.css  App.tsx  main.tsx
frontend/app/components/: MultiSelect.tsx  PickedPage.tsx  SectorButton.tsx  SettingsPage.tsx  Sidebar.tsx  StockItem.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UpdateConceptsButton.tsx
frontend/app/components/ui/: table.tsx
frontend/app/lib/: PickedContext.tsx
frontend/src/: App.tsx
