[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.26",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "pyinstaller>=6.14.2",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
