[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-backend"
version = "0.1.0"
dependencies = [
    "akshare>=1.17.28",
    "fastapi",
    "pandas>=2.3.1",
    "uvicorn",
    "websockets>=15.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

